# Python_ITMO_DZ

./: .gitignore  pyproject.toml
hw_1/: README.md  cli_nl.py  cli_tail.py  cli_wc.py
hw_1/artifacts/: nl_empty_lines_output.txt  nl_multiple_output.txt  nl_output.txt  nl_stdin_output.txt  tail_multiple_output.txt  tail_n_output.txt  tail_stdin_output.txt  wc_multiple_output.txt  wc_output.txt  wc_stdin_output.txt
hw_1/tests/: test_nl.py  test_tail.py  test_wc.py
hw_1/tests/test_data/: wc_input.txt
hw_2/: Dockerfile  README.md  docker-compose.yaml  main.py  main_with_import.py  setup.py
hw_2/artifacts/: output.tex  Ссылка_на_PyPI.txt
hw_2/data/: table_data.json
hw_2/latex_generator_VILGIZ/: __init__.py  latex_generator.py
hw_3/hw_3_1/: main.py  matrix.py
hw_3/hw_3_2/: main.py  matrix_mixin.py
hw_3/hw_3_3/: main.py  matrix_hash.py
hw_3/hw_3_3/artifacts/: AB.txt  C.txt  D.txt  hash.txt
hw_3/tests/: test_hw_3_1.py  test_hw_3_2.py  test_hw_3_3.py
