[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex_homework"
version = "0.1.0"
description = "solutions for the homeworks"
authors = [
  { name = "Vilgiz" }
]
requires-python = ">=3.9"
dependencies = [
  "pytest>=7.2", "numpy==1.23.5"
]

[tool.setuptools]
package-dir = {"" = "hw_2"}
packages = ["latex_generator"]

[tool.pytest.ini_options]
testpaths = [
  "hw_1/tests",
  "hw_3/tests"
]
